# RSTools-preprocessing

./: .gitignore  Makefile.am  configure.ac
share/jobs/plugins/: bfcorrection.xsdext  despiking.xsdext  distcorrection.xsdext  fmdistcorrection.xsdext  mbslicetiming.xsdext  newnormalization.xsdext  normalization.xsdext  realignment.xsdext  regressors.xsdext  reorientation.xsdext  slicetiming.xsdext  smoothing.xsdext  transformation.xsdext
src/: .gitignore  Makefile.am
src/batch/: .gitignore  Makefile.am
src/batch/plugins/: .gitignore  Makefile.am
src/batch/plugins/bfcorrection/: bfcorrection.cpp  bfcorrection.hpp
src/batch/plugins/bfcorrection/task/: bfcorrection.cpp  bfcorrection.hpp
src/batch/plugins/bfcorrection/tool/: bfcorrection.cpp  bfcorrection.hpp
src/batch/plugins/despiking/: despiking.cpp  despiking.hpp
src/batch/plugins/despiking/task/: despiking.cpp  despiking.hpp
src/batch/plugins/despiking/tool/: despiking.cpp  despiking.hpp
src/batch/plugins/distcorrection/: distcorrection.cpp  distcorrection.hpp
src/batch/plugins/distcorrection/task/: distcorrection.cpp  distcorrection.hpp  fmdistcorrection.cpp  fmdistcorrection.hpp
src/batch/plugins/distcorrection/tool/: distcorrection.cpp  distcorrection.hpp
src/batch/plugins/normalization/: normalization.cpp  normalization.hpp
src/batch/plugins/normalization/task/: newnormalization.cpp  newnormalization.hpp  normalization.cpp  normalization.hpp
src/batch/plugins/normalization/tool/: normalization.cpp  normalization.hpp
src/batch/plugins/realignment/: realignment.cpp  realignment.hpp
src/batch/plugins/realignment/task/: realignment.cpp  realignment.hpp
src/batch/plugins/realignment/tool/: realignment.cpp  realignment.hpp
src/batch/plugins/regressors/: regressors.cpp  regressors.hpp
src/batch/plugins/regressors/task/: regressors.cpp  regressors.hpp
src/batch/plugins/regressors/tool/: regressors.cpp  regressors.hpp
src/batch/plugins/reorientation/: reorientation.cpp  reorientation.hpp
src/batch/plugins/reorientation/task/: reorientation.cpp  reorientation.hpp
src/batch/plugins/reorientation/tool/: reorientation.cpp  reorientation.hpp
src/batch/plugins/slicetiming/: slicetiming.cpp  slicetiming.hpp
src/batch/plugins/slicetiming/task/: mbslicetiming.cpp  mbslicetiming.hpp  slicetiming.cpp  slicetiming.hpp
src/batch/plugins/slicetiming/tool/: slicetiming.cpp  slicetiming.hpp
src/batch/plugins/smoothing/: smoothing.cpp  smoothing.hpp
src/batch/plugins/smoothing/task/: smoothing.cpp  smoothing.hpp
src/batch/plugins/smoothing/tool/: smoothing.cpp  smoothing.hpp
src/batch/plugins/transformation/: transformation.cpp  transformation.hpp
src/batch/plugins/transformation/task/: transformation.cpp  transformation.hpp
src/batch/plugins/transformation/tool/: transformation.cpp  transformation.hpp
