SUBDIRS = . batch

nobase_pkginclude_HEADERS =                                     \
	batch/plugins/bfcorrection/bfcorrection.hpp					\
    batch/plugins/bfcorrection/task/bfcorrection.hpp			\
    batch/plugins/bfcorrection/tool/bfcorrection.hpp			\
    batch/plugins/despiking/despiking.hpp						\
    batch/plugins/despiking/task/despiking.hpp					\
    batch/plugins/despiking/tool/despiking.hpp					\
    batch/plugins/distcorrection/distcorrection.hpp				\
    batch/plugins/distcorrection/task/distcorrection.hpp		\
    batch/plugins/distcorrection/task/fmdistcorrection.hpp		\
    batch/plugins/distcorrection/tool/distcorrection.hpp		\
    batch/plugins/normalization/normalization.hpp				\
    batch/plugins/normalization/task/normalization.hpp			\
    batch/plugins/normalization/tool/normalization.hpp			\
    batch/plugins/realignment/realignment.hpp					\
    batch/plugins/realignment/task/realignment.hpp				\
    batch/plugins/realignment/tool/realignment.hpp				\
    batch/plugins/regressors/regressors.hpp						\
    batch/plugins/regressors/task/regressors.hpp				\
    batch/plugins/regressors/tool/regressors.hpp				\
    batch/plugins/reorientation/reorientation.hpp				\
    batch/plugins/reorientation/task/reorientation.hpp			\
    batch/plugins/reorientation/tool/reorientation.hpp			\
    batch/plugins/slicetiming/slicetiming.hpp					\
    batch/plugins/slicetiming/task/mbslicetiming.hpp			\
    batch/plugins/slicetiming/task/slicetiming.hpp				\
    batch/plugins/slicetiming/tool/slicetiming.hpp				\
    batch/plugins/smoothing/smoothing.hpp						\
    batch/plugins/smoothing/task/smoothing.hpp					\
    batch/plugins/smoothing/tool/smoothing.hpp					\
    batch/plugins/transformation/task/transformation.hpp		\
    batch/plugins/transformation/tool/transformation.hpp		\
    batch/plugins/transformation/transformation.hpp